--- a/global/css/layout.css
+++ b/global/css/layout.css
@@ -42,11 +42,11 @@ header nav.menubar {
 }
 
 nav.navigation {
-    width: 50%;
+    width: 40%;
 }
 
 nav.user {
-    width: 25%;
+    width: 30%;
 }
 
 header nav ul {
@@ -63,6 +63,11 @@ header nav ul li {
     padding: 15px;
 }
 
+header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
 header nav ul li.selected {
     background: rgba(255, 255, 255, 0.1);
 }
@@ -70,9 +75,81 @@ header nav ul li.selected {
 header nav ul li:hover {
     font-weight: bold;
     background: rgba(255, 255, 255, 0.3);
+    color: #ccc;
+    padding-left: 13px;
+    padding-right: 13px;
 }
 
 header nav ul li:active {
     font-weight: bold;
     background: rgba(255, 255, 255, 0.5);
+}
+
+div#shader {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+div.popup {
+    display: none;
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    margin-top: -200px;
+    margin-left: -200px;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 5px 5px 25px #000;
+    border-radius: 15px;
+    padding: 25px;
+}
+
+div.popup form {
+    position: absolute;
+    width: 350px;
+    height: 350px;
+    top: 50%;
+    left: 50%;
+    margin-top: -175px;
+    margin-left: -175px;
+}
+
+div.popup form fieldset {
+    border-radius: 15px;
+    border: 2px solid #ccc;
+    height: 95%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+div.popup form input {
+    width: 95%;
+    float: left;
+    clear: both;
+    border: none;
+    height: 25px;
+    background: transparent;
+    margin-top: 15px;
+    border-radius: 10px;
+    border: 2px solid #ccc;
+    padding: 5px;
+}
+
+input[type="submit"],
+button {
+    cursor: pointer;
+    width: 98% !important;
+    height: 30px !important;
+}
+
+input[type="submit"]:hover,
+button:hover {
+    background: #ccc;
 }
